# simple-solana-two-wallets

./: README.md
client/: .gitignore  Cargo.toml
client/src/: accounts.rs  main.rs  utils.rs
program/: Cargo.toml
program/src/: lib.rs
program/tests/: functional.rs
