[package]
name = "solana-two-wallets"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.8.1"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
solana-frozen-abi = "=1.8.1"
zeroize = "=1.3.0"

[dev-dependencies]
tokio="*"
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]
